deps: update pyprojects to use 1.* version of garf and update requirements files

--- a/libs/community/google/knowledge-graph/pyproject.toml
+++ b/libs/community/google/knowledge-graph/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "garf-knowledge-graph-api"
 dependencies = [
-  "garf-core",
-  "garf-io",
+  "garf-core>=1.0.0",
+  "garf-io>=1.0.0",
   "google-api-python-client",
 ]
 authors = [
