--- a/libs/community/google/ads/pyproject.toml
+++ b/libs/community/google/ads/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "garf-google-ads"
 dependencies = [
-  "garf-core",
-  "garf-io",
+  "garf-core>=1.0.0",
+  "garf-io>=1.0.0",
   "google-ads",
   "tenacity",
 ]
@@ -19,7 +19,7 @@ requires-python = ">=3.9"
 description = "Garf implementation for Google Ads API"
 readme = "README.md"
 classifiers = [
-  "Development Status :: 2 - Pre-Alpha",
+  "Development Status :: 4 - Beta",
   "Programming Language :: Python"
 ]
 
