--- a/libs/community/google/analytics/pyproject.toml
+++ b/libs/community/google/analytics/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "garf-google-analytics"
 dependencies = [
-  "garf-core",
-  "garf-io",
+  "garf-core>=1.0.0",
+  "garf-io>=1.0.0",
   "google-analytics-data",
 ]
 authors = [
@@ -17,7 +17,7 @@ requires-python = ">=3.8"
 description = "Garf implementation for Google Analytics API"
 readme = "README.md"
 classifiers = [
-  "Development Status :: 2 - Pre-Alpha",
+  "Development Status :: 4 - Beta",
   "Programming Language :: Python"
 ]
 
