--- a/libs/community/google/bid-manager/pyproject.toml
+++ b/libs/community/google/bid-manager/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "garf-bid-manager"
 dependencies = [
-  "garf-core",
-  "garf-io",
+  "garf-core>=1.0.0",
+  "garf-io>=1.0.0",
   "google-api-python-client",
   "google_auth_oauthlib",
   "tenacity",
@@ -20,7 +20,7 @@ requires-python = ">=3.9"
 description = "Garf implementation for Google Bid Manager API"
 readme = "README.md"
 classifiers = [
-  "Development Status :: 2 - Pre-Alpha",
+  "Development Status :: 4 - Beta",
   "Programming Language :: Python"
 ]
 
