--- a/libs/community/google/merchant/pyproject.toml
+++ b/libs/community/google/merchant/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "garf-merchant-api"
 dependencies = [
-  "garf-core",
-  "garf-io",
+  "garf-core>=1.0.0",
+  "garf-io>=1.0.0",
   "google-shopping-merchant-reports",
 ]
 authors = [
