--- a/libs/io/pyproject.toml
+++ b/libs/io/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "garf-io"
 dependencies = [
-  "garf-core",
+  "garf-core>=1.0.0",
   "smart_open",
   "rich",
   "opentelemetry-api",
