--- a/.github/workflows/publish_garf_youtube.yaml
+++ b/.github/workflows/publish_garf_youtube.yaml
@@ -1,12 +1,12 @@
-name: Publish to PyPI - garf-youtube-reporting-api
+name: Publish to PyPI - garf-youtube
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'libs/community/google/youtube/youtube-reporting-api/**'
-      - '!libs/community/google/youtube/youtube-reporting-api/*.md'
+      - 'libs/community/google/youtube/'
+      - '!libs/community/google/youtube/*.md'
 
 jobs:
   publish:
@@ -26,8 +26,8 @@ jobs:
       - name: Get versions and check for change
         id: version_check
         run: |
-          PREV_VERSION=$(git show HEAD~1:libs/community/google/youtube/youtube-reporting-api/garf_youtube_reporting_api/__init__.py | grep -oE "__version__ = '([0-9]+\.[0-9]+\.[0-9]+)'" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
-          CURRENT_VERSION=$(grep -oE "__version__ = '([0-9]+\.[0-9]+\.[0-9]+)'" libs/community/google/youtube/youtube-reporting-api/garf_youtube_reporting_api/__init__.py | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
+          PREV_VERSION=$(git show HEAD~1:libs/community/google/youtube/garf/community/google/youtube/__init__.py | grep -oE "__version__ = '([0-9]+\.[0-9]+\.[0-9]+)'" | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
+          CURRENT_VERSION=$(grep -oE "__version__ = '([0-9]+\.[0-9]+\.[0-9]+)'" libs/community/google/youtube/garf/community/google/youtube/__init__.py | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
 
           if [[ "$CURRENT_VERSION" != "$PREV_VERSION" ]]; then
             echo "Version change detected: $PREV_VERSION -> $CURRENT_VERSION"
@@ -40,8 +40,8 @@ jobs:
 
       - name: Build the package
         if: steps.version_check.outputs.should_publish == 'true'
-        run: uv build libs/community/google/youtube/youtube-reporting-api/
+        run: uv build libs/community/google/youtube/
 
       - name: Publish to PyPI
         if: steps.version_check.outputs.should_publish == 'true'
-        run: uv publish libs/community/google/youtube/youtube-reporting-api/dist/*
+        run: uv publish libs/community/google/youtube/dist/*
