--- a/libs/executors/requirements.txt
+++ b/libs/executors/requirements.txt
@@ -177,9 +177,9 @@ fastapi-cli[standard]==0.0.20 \
     --hash=sha256:d17c2634f7b96b6b560bc16b0035ed047d523c912011395f49f00a421692bc3a \
     --hash=sha256:e58b6a0038c0b1532b7a0af690656093dee666201b6b19d3c87175b358e9f783
     # via fastapi
-fastapi-cloud-cli==0.10.1 \
-    --hash=sha256:0feeb2aabfb0558298d60bc19d2afb4782adfa262c23ecf5bda657db42f46df0 \
-    --hash=sha256:f03fb50b457767012ff11d9ed38ae9d2127edf7ddd371febedc0428f531612ca
+fastapi-cloud-cli==0.11.0 \
+    --hash=sha256:76857b0f09d918acfcb50ade34682ba3b2079ca0c43fda10215de301f185a7f8 \
+    --hash=sha256:ecc83a5db106be35af528eccb01aa9bced1d29783efd48c8c1c831cf111eea99
     # via fastapi-cli
 fastar==0.8.0 \
     --hash=sha256:003b59a7c3e405b6a7bff8fab17d31e0ccbc7f06730a8f8ca1694eeea75f3c76 \
@@ -337,15 +337,15 @@ fastar==0.8.0 \
     --hash=sha256:feb8f73ad25ad84f986dc53e7c6561b281ee2087500f6e400899c3bf1a3f6dc0 \
     --hash=sha256:ff85094f10003801339ac4fa9b20a3410c2d8f284d4cba2dc99de6e98c877812
     # via fastapi-cloud-cli
-garf-core==1.0.0 \
-    --hash=sha256:087ed5dcf0901fd335e51d9513971f5e4153faa7fceba0e2fc1463406dddcc30 \
-    --hash=sha256:ddb263d48a2922a0c473bd82000636de373fe59a44246ee1443bc95d1c5a8102
+garf-core==1.0.3 \
+    --hash=sha256:1a34f350a36339cb2126535d3fbbaa949a316cf5286cb3d0abe941ff44a90b1f \
+    --hash=sha256:c29f2b195ef763dcd8e79e4e350770fcacd24692f61708e14a0c250e65169b0b
     # via
     #   garf-executors
     #   garf-io
-garf-executors[server]==1.0.0 \
-    --hash=sha256:0e84ad0446801058785b0a6d038c897966c2bd0fe7334ae47a65ae8126ed02c2 \
-    --hash=sha256:2b6ddb8fbb6e2d34f84bcc826cbdcc244dc513f03e8d7322b827682241a785c6
+garf-executors[server]==1.0.6 \
+    --hash=sha256:2017b32e0766faa139b07ee839102fd5b617c0490db150e7f7340e46ff6d1111 \
+    --hash=sha256:946a251cc7010ae403cf218f10f13173f0bbd094d1be4b60dd87938479ae33dd
     # via -r requirements.in
 garf-io==1.0.0 \
     --hash=sha256:3226c174add50393c9c5046cca81da5ecf9eae0a83edfdfd99233cb8a9a0c062 \
@@ -419,7 +419,13 @@ grpcio==1.76.0 \
     --hash=sha256:f9f7bd5faab55f47231ad8dba7787866b69f5e93bc306e3915606779bbfb4ba8 \
     --hash=sha256:fd5ef5932f6475c436c4a55e4336ebbe47bd3272be04964a03d316bbf4afbcbc \
     --hash=sha256:ff8a59ea85a1f2191a0ffcc61298c571bc566332f82e5f5be1b83c9d8e668a62
-    # via opentelemetry-exporter-otlp-proto-grpc
+    # via
+    #   grpcio-reflection
+    #   opentelemetry-exporter-otlp-proto-grpc
+grpcio-reflection==1.76.0 \
+    --hash=sha256:d7c43f2047a2a9c9320a5905aa7133c677977436b5f63e6a868e507864a11c73 \
+    --hash=sha256:e0e7e49921c2ee951e5ddff0bdbacbd1ac1a70888beb61d567f3d01b799decb1
+    # via garf-executors
 h11==0.16.0 \
     --hash=sha256:4e35b956cf45792e4caa5885e69fba00bdbc6ffafbfa020300e549b208ee5ff1 \
     --hash=sha256:63cf8bbe7522de3bf65932fda1d9c2772064ffb3dae62d55932da54b31cb6c86
@@ -672,9 +678,9 @@ opentelemetry-util-http==0.60b1 \
     # via
     #   opentelemetry-instrumentation-asgi
     #   opentelemetry-instrumentation-fastapi
-packaging==25.0 \
-    --hash=sha256:29572ef2b1f17581046b3a2227d5c611fb25ec70ca1ba8554b24b0e69331a484 \
-    --hash=sha256:d443872c98d677bf60f6a1f2f8c1cb748e8fe762d2bf9d3148b5599295b0fc4f
+packaging==26.0 \
+    --hash=sha256:00243ae351a257117b6a241061796684b084ed1c516a08c48a3f7e147a9d80b4 \
+    --hash=sha256:b36f1fef9334a5588b4166f8bcd26a14e521f2b55e6b9de3aaa80d3ff7a37529
     # via opentelemetry-instrumentation
 protobuf==6.33.4 \
     --hash=sha256:0f12ddbf96912690c3582f9dffb55530ef32015ad8e678cd494312bd78314c4f \
@@ -689,6 +695,7 @@ protobuf==6.33.4 \
     --hash=sha256:dc2e61bca3b10470c1912d166fe0af67bfc20eb55971dcef8dfa48ce14f0ed91
     # via
     #   googleapis-common-protos
+    #   grpcio-reflection
     #   opentelemetry-proto
 pydantic[email]==2.12.5 \
     --hash=sha256:4d351024c75c0f085a9febbb665ce8c0c6ec5d30e903bdb6394b7ede26aebb49 \
@@ -845,9 +852,9 @@ python-dotenv==1.2.1 \
     # via
     #   pydantic-settings
     #   uvicorn
-python-multipart==0.0.21 \
-    --hash=sha256:7137ebd4d3bbf70ea1622998f902b97a29434a9e8dc40eb203bbcf7c2a2cba92 \
-    --hash=sha256:cf7a6713e01c87aa35387f4774e812c4361150938d20d232800f75ffcf266090
+python-multipart==0.0.22 \
+    --hash=sha256:2b2cd894c83d21bf49d702499531c7bafd057d730c201782048f7945d82de155 \
+    --hash=sha256:7340bef99a7e0032613f56dc36027b959fd3b30a787ed62d310e951f7c3a3a58
     # via fastapi
 pyyaml==6.0.3 \
     --hash=sha256:00c4bdeba853cc34e7dd471f16b4114f4162dc03e6b7afcc2128711f0eca823c \
@@ -933,9 +940,9 @@ requests==2.32.5 \
     # via
     #   garf-core
     #   opentelemetry-exporter-otlp-proto-http
-rich==14.2.0 \
-    --hash=sha256:73ff50c7c0c1c77c8243079283f4edb376f0f6442433aecb8ce7e6d0b92d1fe4 \
-    --hash=sha256:76bc51fe2e57d2b1be1f96c524b890b816e334ab4c1e45888799bfaab0021edd
+rich==14.3.1 \
+    --hash=sha256:b8c5f568a3a749f9290ec6bddedf835cec33696bfc1e48bcfecb276c7386e4b8 \
+    --hash=sha256:da750b1aebbff0b372557426fb3f35ba56de8ef954b3190315eb64076d6fb54e
     # via
     #   garf-io
     #   rich-toolkit
@@ -1102,9 +1109,9 @@ rignore==0.7.6 \
     --hash=sha256:fe6c41175c36554a4ef0994cd1b4dbd6d73156fca779066456b781707402048e \
     --hash=sha256:ffa86694fec604c613696cb91e43892aa22e1fec5f9870e48f111c603e5ec4e9
     # via fastapi-cloud-cli
-sentry-sdk==2.49.0 \
-    --hash=sha256:6ea78499133874445a20fe9c826c9e960070abeb7ae0cdf930314ab16bb97aa0 \
-    --hash=sha256:c1878599cde410d481c04ef50ee3aedd4f600e4d0d253f4763041e468b332c30
+sentry-sdk==2.50.0 \
+    --hash=sha256:0ef0ed7168657ceb5a0be081f4102d92042a125462d1d1a29277992e344e749e \
+    --hash=sha256:873437a989ee1b8b25579847bae8384515bf18cfed231b06c591b735c1781fe3
     # via fastapi-cloud-cli
 shellingham==1.5.4 \
     --hash=sha256:7ecfff8f2fd72616f7481040475a65b2bf8af90a56c89140852d1120324e8686 \
