deps(io): add cloud storage backend for BigQuery writer

--- a/libs/io/pyproject.toml
+++ b/libs/io/pyproject.toml
@@ -46,6 +46,7 @@ test =  [
 ]
 bq=[
   "google-cloud-bigquery",
+  "google-cloud-bigquery-storage",
   "pandas",
   "smart_open[gcs]",
   "pandas-gbq",
