feat(executors): add support for specifying logging parameters via env variables

--- a/libs/executors/pyproject.toml
+++ b/libs/executors/pyproject.toml
@@ -55,6 +55,7 @@ gcp= [
 ]
 server=[
   "fastapi[standard]",
+  "pydantic-settings",
   "opentelemetry-instrumentation-fastapi",
   "typer",
   "grpcio-reflection",
