feat(executors): add workflow spec specific parallel_threshold

--- a/libs/executors/pyproject.toml
+++ b/libs/executors/pyproject.toml
@@ -69,6 +69,10 @@ tests = [
 all = [
   "garf-executors[bq,sql,server,gcp]"
 ]
+
+[tool.setuptools.package-data]
+"*"= ["gcp_workflow.yaml"]
+
 [project.scripts]
 garf="garf.executors.entrypoints.cli:main"
 
