feat(executors): add export of metrics to Google Cloud

--- a/libs/executors/pyproject.toml
+++ b/libs/executors/pyproject.toml
@@ -52,6 +52,7 @@ sql=[
 ]
 gcp= [
   "opentelemetry-exporter-gcp-trace",
+  "opentelemetry-exporter-gcp-monitoring",
 ]
 server=[
   "fastapi[standard]",
