feat(bid-manager): improve API interaction
* validate provided dataRange
* pick random available port for doing oauth authentication
* initialize API client once in fetcher
* init module specific logger for api client

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -74,6 +74,12 @@ repos:
     files: ^libs/community/google/ads/
     language: system
     pass_filenames: false
+  - id: pytest-check-bid-manager
+    name: pytest-check-bid-manager
+    entry: pytest -n auto libs/community/google/bid-manager/tests/unit/
+    files: ^libs/community/google/bid-manager/
+    language: system
+    pass_filenames: false
   - id: executors-e2e
     stages: [pre-push]
     name: e2e
