--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,7 @@ nav:
       - DuckDB: usage/executors/duckdb-executor.md
       - OpenSearch: usage/executors/opensearch-executor.md
     - Exporters: usage/exporters.md
+    - Workflows: usage/workflows.md
   - Development:
     - Overview: development/overview.md
     - Create API client: development/create-api-client.md
