feat(executors): add otel support for logs and make telemetry optional
* disable telemetry by default and add new flags `--enable-telemetry`,
`--logs-to-otel`, `--metrics-to-otel`, `--traces-to-otel`.
* add support for env varibles `GARF_ENABLE_TELEMETRY`,
  `GARF_LOGS_TO_OTEL`, `GARF_METRICS_TO_OTEL`, `GARF_TRACES_TO_OTEL`
* add opentelemetry container to `docker-compose.yaml`
* add configs folder with `otel-collector-config.yaml` and `prometheus.yaml` referenced in docker compose

--- a/libs/executors/docker-compose.yaml
+++ b/libs/executors/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
     environment:
       - COLLECTOR_OTLP_ENABLED=true
   otel-collector:
-    image: otel/opentelemetry-collector:latest
+    image: otel/opentelemetry-collector-contrib:latest
     container_name: otel-collector
     command: ["--config=/etc/otel-collector-config.yml"]
     user: 0:0
@@ -42,3 +42,22 @@ services:
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--web.enable-lifecycle'
     restart: unless-stopped
+  opensearch:
+    image: opensearchproject/opensearch:latest
+    environment:
+      - cluster.name=opensearch-cluster
+      - node.name=opensearch
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "DISABLE_INSTALL_DEMO_CONFIG=true"
+      - "DISABLE_SECURITY_PLUGIN=true"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    ports:
+      - 9200:9200
